--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>HW-11 Timer</title>
   </head>
   <body>
@@ -27,5 +28,7 @@
         <span class="label">Seconds</span>
       </div>
     </div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
